# GameShoot

./: .gitignore  CMakeLists.txt  README.md
src/: background.c  background.h  common.h  defs.h  draw.c  draw.h  highscore.c  highscore.h  init.c  init.h  input.c  input.h  main.c  sound.c  sound.h  stage.c  stage.h  structs.h  text.c  text.h  title.c  title.h  util.c  util.h
